feature/aesthetic-tweaks

--- a/index.html
+++ b/index.html
@@ -2,8 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width,minimum-scale=1,initial-scale=1"
+    />
     <title>AttaPlumbing.Inc</title>
+    <link
+      rel="preload"
+      href="https://ik.imagekit.io/pbq9icsqc/pexels-wdnet-14953886.webp?updatedAt=1720653473873"
+      as="image"
+    />
+    <link
+      rel="preload"
+      href="https://ik.imagekit.io/pbq9icsqc/pexels-magda-ehlers-pexels-3721272.webp?updatedAt=1720653474324"
+      as="image"
+    />
+    <link
+      rel="preload"
+      href="https://ik.imagekit.io/pbq9icsqc/vecteezy_ai-generated-beautiful-photography-for-plumbing-services_38813454.webp?updatedAt=1720653474196"
+      as="image"
+    />
   </head>
   <body>
     <!-- App.jsx will loaded to the root -->
